
erDiagram
    APP_USER ||--o{ SENSOR : "has"
    SENSOR ||--o{ SENSOR_READING : "records"
    SENSOR ||--o{ ALERT : "triggers"
    APP_USER ||--o{ CONSUMPTION_SUMMARY : "summarized"

    APP_USER {
      NUMBER USER_ID PK
      VARCHAR NAME
      VARCHAR EMAIL
      TIMESTAMP CREATED_AT
    }
    SENSOR {
      NUMBER SENSOR_ID PK
      NUMBER USER_ID FK
      VARCHAR NAME
      VARCHAR TYPE
      VARCHAR LOCATION
      TIMESTAMP CREATED_AT
    }
    SENSOR_READING {
      NUMBER READING_ID PK
      NUMBER SENSOR_ID FK
      TIMESTAMP READING_TS
      NUMBER POWER_W
      NUMBER TEMP_C
      NUMBER HUMIDITY_PCT
    }
    ALERT {
      NUMBER ALERT_ID PK
      NUMBER SENSOR_ID FK
      TIMESTAMP ALERT_TS
      VARCHAR LEVEL
      VARCHAR MESSAGE
      CLOB META_JSON
    }
    CONSUMPTION_SUMMARY {
      NUMBER SUMMARY_ID PK
      NUMBER USER_ID FK
      TIMESTAMP FROM_TS
      TIMESTAMP TO_TS
      NUMBER TOTAL_KWH
      NUMBER AVG_POWER_W
      TIMESTAMP CREATED_AT
    }
